Fixed footer css on mobile

--- a/resources/assets/stylesheets/cbc/_footer.scss
+++ b/resources/assets/stylesheets/cbc/_footer.scss
@@ -30,3 +30,13 @@ footer {
 .copyright {
   padding: 30px 15px 0px;
 }
+
+@media (max-width: $screen-md) {
+  footer {
+    text-align: center;
+  }
+
+  .fiec-footer img {
+    width: 75%;
+  }
+}
